[metadata]
name = easy_kline
version = 0.0.1
author = mohder
author_email = mohder1379@gmail.com
description ="Easy_klines" is a Python library that provides a solution to the limitations of exchange APIs in retrieving candlestick data more efficiently and quickly.
long_description = file: README.md
long_description_content_type = 
url = https://github.com/mohder79/Easy_klines
project_urls =
    Bug Tracker = https://github.com/mohder79/Easy_klines
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.5

[options.packages.find]
where = src